[gd_scene load_steps=15 format=2]

[ext_resource path="res://addons/multiplayer/Sync.gd" type="Script" id=1]
[ext_resource path="res://FishGame/Fish.gd" type="Script" id=2]
[ext_resource path="res://assets/FishGame/tile_0350.png" type="Texture" id=3]
[ext_resource path="res://assets/FishGame/tile_0410.png" type="Texture" id=4]
[ext_resource path="res://assets/FishGame/tile_0411.png" type="Texture" id=5]
[ext_resource path="res://assets/FishGame/tile_0380.png" type="Texture" id=6]
[ext_resource path="res://assets/FishGame/tile_0351.png" type="Texture" id=7]
[ext_resource path="res://assets/FishGame/tile_0381.png" type="Texture" id=8]
[ext_resource path="res://assets/sounds/jingles_PIZZI16.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sounds/select_006.wav" type="AudioStream" id=10]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.99613
height = 6.81211

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Fish" type="KinematicBody2D" groups=["fish"]]
scale = Vector2( 1.5, 1.5 )
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["fish"]]
position = Vector2( 0.666667, 0 )
shape = SubResource( 1 )

[node name="PinkFish" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 0.360784, 0, 1, 1 )
rotation = -1.5708
frames = SubResource( 2 )
frame = 1
playing = true

[node name="GreenFish" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 0, 0.909804, 0.290196, 1 )
rotation = -1.5708
frames = SubResource( 3 )
playing = true

[node name="BlueFish" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 4 )
playing = true

[node name="VisibilityNotifier" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.654771, 0 )
scale = Vector2( 0.672615, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Sync" type="Node" parent="."]
script = ExtResource( 1 )
initial = PoolStringArray( "speed", "color", "position", "points", "index" )

[node name="PinkFishCaught" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="GreenFishCaught" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )

[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
[connection signal="finished" from="PinkFishCaught" to="." method="_on_sound_finished"]
[connection signal="finished" from="GreenFishCaught" to="." method="_on_sound_finished"]
